--- a/app/views/mobile_dashboard/index.html.erb
+++ b/app/views/mobile_dashboard/index.html.erb
@@ -1,4 +1,4 @@
-<div ng-app="mobileApp" ng-controller="mobileCtrl" class="mobile_dashboard" ng-class="getRoleClass()">
+<div ng-app="wtsApp" ng-controller="apiCtrl" ng-init="setMobile(true)" class="mobile_dashboard" ng-class="getRoleClass()">
   <div class="country-header">
     <div class="country-items">
       <%= render(:partial => "header", :controller => "mobile_dashboard") %>
