--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,18 +22,16 @@
       <%= f.label :password_confirmation %> </br>
       <%= f.password_field :password_confirmation, :size => "50"%></br>
 
+      <%= f.hidden_field :role, :value => @user.role %>
 
-      <%= f.label :role %> </br>
-       <%= f.select :role, options_for_select(current_user.managed_roles, selected = @user.role) %></br><br />
+      <%= f.label :team %> </br>
+        <%= f.select :team, options_for_select(@teams.collect{ |team| [team.team_name, team.id]}, selected = @user.team_id) %></br><br />
 
-      <% if @user.role === 'Player' %>
-        <%= f.label :team %> </br>
-          <%= f.select :team, options_for_select(@teams.collect{ |team| [team.team_name, team]}, selected = @user.team) %></br><br />
+      <%= f.label :team_role %> </br>
+        <%= f.select :team_role, options_for_select(@team_roles.collect{ |role| [role.role_display_name, role.id]}, selected = @user.team_role_id) %></br><br />
 
-        <%= f.label :team_role %> </br>
-          <%= f.select :team_role, options_for_select(@team_roles.collect{ |role| [role.role_display_name, role.id]}, selected = @user.team_role.id) %></br><br />
-
-      <% end %>
+      <%= f.label :game %> </br>
+       <%= f.select :game, options_for_select(@games.collect{ |game| [game.name, game.id]}) %></br><br />
 
       <%= f.submit %>
     </div>
