Make controller for retrieving a user's Team, Team Role, and Team Role Permissions

--- a/app/views/mobile_dashboard/_header.html.erb
+++ b/app/views/mobile_dashboard/_header.html.erb
@@ -4,11 +4,11 @@
 </div>
 
 <div class="my-country">
-  <div class="flag"><img ng-src="assets/flags/{{myCountry}}.png" /></div>
-  <div class="govt">Government of {{myCountry}}
-    <h4>{{getRoleName}}</h4>
+  <div class="flag"><img ng-src="assets/flags/{{myCountryName}}.png" /></div>
+  <div class="govt">Government of {{myCountryName}}
+    <h4>{{myRoleName}}</h4>
   </div>
-  <div class="role"><img ng-src="assets/flags/{{myCountry}}.png" /></div>
+  <div class="role"><img ng-src="assets/flags/{{myCountryName}}.png" /></div>
 </div>
 
 <div class="terror-container">
