--- a/app/views/mobile_dashboard/index.html.erb
+++ b/app/views/mobile_dashboard/index.html.erb
@@ -1,38 +1,38 @@
-  <div class="country-header">
-    <div class="country-items">
-      <%= render(:partial => "header", :controller => "mobile_dashboard") %>
 <div ng-app="wtsApp" ng-controller="apiCtrl" ng-init="setMobile(true)" class="mobile_dashboard">
   <div ng-controller="baseMobileCtrl" ng-class="roleClass">
-    </div>
-    <div class="country-messages">
-      <div ng-if="controlMessage">Important Messages: {{controlMessage}}</div>
-      <%= link_to 'Logout', destroy_user_session_path, :method => :delete, :class => 'button logoff' %>
-    </div>
-  </div>
-
-  <div class="tabs" ng-controller="tabsCtrl">
-    <%= render(:partial => "navigation", :controller => "mobile_dashboard") %>
-
-    <div id="tab-news" class="tab news" ng-show="focusedTab === 'news'" ng-controller="newsCtrl">
-      <%= render(:partial => "news", :controller => "mobile_dashboard") %>
+    <div class="country-header">
+      <div class="country-items">
+        <%= render(:partial => "header", :controller => "dahsboard") %>
+      </div>
+      <div class="country-messages">
+        <div ng-if="controlMessage">Important Messages: {{controlMessage}}</div>
+        <%= link_to 'Logout', destroy_user_session_path, :method => :delete, :class => 'button logoff' %>
+      </div>
     </div>
 
-      <%= render(:partial => "messages", :controller => "mobile_dashboard") %>
-    <div id="tab-messages" class="tab messages" ng-if="focusedTab === 'messages'" ng-controller="messagesCtrl">
-    </div>
+    <div class="tabs">
+      <%= render(:partial => "navigation", :controller => "dahsboard") %>
+
+      <div id="tab-news" class="tab news" ng-show="focusedTab === 'news'" ng-controller="newsCtrl">
+        <%= render(:partial => "news", :controller => "dahsboard") %>
+      </div>
+
+      <div id="tab-messages" class="tab messages" ng-if="focusedTab === 'messages'" ng-controller="messagesCtrl">
+        <%= render(:partial => "messages", :controller => "dahsboard") %>
+      </div>
 
 
-    <!-- Operatives -->
+      <!-- Operatives -->
 
-    <!-- Spying -->
+      <!-- Spying -->
 
-    <div id="tab-income" class="tab income" ng-if="checkPermissions('income') && focusedTab === 'income'" ng-controller="incomeCtrl">
-      <%= render(:partial => "income", :controller => "income") %>
-    </div>
+      <div id="tab-income" class="tab income" ng-if="checkPermissions('income') && focusedTab === 'income'" ng-controller="incomeCtrl">
+        <%= render(:partial => "income", :controller => "income") %>
+      </div>
 
-    <!-- Research -->
-    <!-- Trades -->
-    <!-- Rumours -->
+      <!-- Research -->
+      <!-- Trades -->
+      <!-- Rumours -->
     </div>
   </div>
 </div>
