--- a/app/views/mobile_dashboard/index.html.erb
+++ b/app/views/mobile_dashboard/index.html.erb
@@ -1,5 +1,5 @@
-<div ng-app="wtsApp" ng-controller="apiCtrl" ng-init="setMobile(true)" class="mobile_dashboard">
-  <div ng-controller="baseMobileCtrl" ng-class="roleClass">
+<div ng-app="wtsApp" ng-controller="baseMobileCtrl" ng-class="roleClass" class="mobile_dashboard">
+  <div ng-controller="apiCtrl" ng-init="setMobile(true)">
     <div class="country-header">
       <div class="country-items">
         <%= render(:partial => "header", :controller => "dahsboard") %>
