--- a/app/views/messages/_message_content.html.erb
+++ b/app/views/messages/_message_content.html.erb
@@ -1,12 +1,15 @@
 <div class="message-header">
   <div class="message-flag">
-    <img ng-if="message.sender === myCountry" ng-src="assets/flags/{{myCountry}}.png" class="flag" />
-    <img ng-if="message.sender !== myCountry" ng-src="assets/flags/{{selectedMessage.conversation_partner}}.png" class="flag" />
+    <img ng-if="message.sender_id === myCountryId" ng-src="assets/flags/{{myCountryName}}.png" class="flag" />
+    <img ng-if="message.sender_id !== myCountryId" ng-src="assets/flags/{{selectedMessage.conversation_partner.team_name}}.png" class="flag" />
   </div>
 
   <div class="message-info">
-    <div class="from"><b>From:</b> {{message.sender}}</div>
-    <div class="to"><b>To:</b> {{message.recipient}}</div>
+    <div ng-if="message.sender_id === myCountryId" class="from"><b>From:</b> {{myCountryName}}</div>
+    <div ng-if="message.sender_id !== myCountryId" class="from"><b>From:</b> {{selectedMessage.conversation_partner.team_name}}</div>
+
+    <div ng-if="message.recipient_id === myCountryId" class="to"><b>To:</b> {{myCountryName}}</div>
+    <div ng-if="message.recipient_id !== myCountryId" class="to"><b>To:</b> {{selectedMessage.conversation_partner.team_name}}</div>
   </div>
   <div class="time">{{message.created_at | date:'HH:mm a'}}</div>
 </div>
