--- a/app/views/messages/_new_message.html.erb
+++ b/app/views/messages/_new_message.html.erb
@@ -1,21 +1,22 @@
-<%= form_for @newMessage, url: messages_path do |f| %>
+<form novalidate>
   <div class="field">
-    <!-- Sender should be calculated automatically -->
-    <input id="sender" name="message[sender]" type="hidden" value="{{myCountry}}" />
-
     <!-- If the message is new, the recipient can be chosen. If it's a reply, we auto-calculate it -->
-    <% if reciever == 'set' %>
-      <input id="recipient" name="message[recipient]" type="hidden" value="{{selectedMessage.conversation_partner}}" />
-      <%= label(:content, "Reply") %><br>
-    <% else %>
-      <%= label(:recipient, "Recipient") %>: <%= f.select(:recipient,
-      options_for_select([['UK'], ['France'], ['India'], ['US'], ['China'], ['Japan'], ['Brazil'], ['Aliens']])) %><br>
-      <%= label(:content, "Message") %><br>
-    <% end %>
+    <div ng-if="selectedMessage === 'new'">
+      <select ng-model="message.recipient" ng-init="message.recipient=null" required>
+        <option value="" disabled selected="true">Select the team</option>
+        <option ng-repeat="team in validTeams" value="{{team.id}}">{{team.team_name}}</option>
+      </select>
+    </div>
 
-    <%= f.text_area :content %>
+    <div ng-if="selectedMessage !== 'new'">
+      <input type="hidden" ng-model="message.recipient" ng-init="message.recipient=selectedMessage.conversation_partner.id" value="{{selectedMessage.conversation_partner.id}}" />
+    </div>
+
+    <label for="content">Reply</label>
+    <textarea ng-model="message.content"></textarea>
+
+    <div class="error" ng-if="messageError">{{messageError}}</div>
+
+    <div class="button" ng-click="sendMessage(message)">Send Message</div>
   </div>
-  <div class="actions">
-    <%= f.submit "Send Message", :class => 'button' %>
-  </div>
-<% end %>
+</form>
