--- a/app/views/mobile_dashboard/_news.html.erb
+++ b/app/views/mobile_dashboard/_news.html.erb
@@ -7,7 +7,7 @@
     <div class="news-image" style="background-image: url({{news_item.media_url}})"></div>
   </div>
   <div class="news-content">
-    <h4>{{news_item.title | parseTitle}}</h4>
+    <h4>{{news_item.title}}</h4>
     <p>{{news_item.content}}</p>
   </div>
 </div>
