renamed bonus_credit to reserve

--- a/app/views/reserves/index.html.erb
+++ b/app/views/reserves/index.html.erb
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @bonus_credits.each do |bc| %>
+    <% @reserves.each do |bc| %>
       <tr>
         <td><%= bc.team.team_name %></td>
         <td><%= bc.round %></td>
