--- a/app/views/games/human_control.html.erb
+++ b/app/views/games/human_control.html.erb
@@ -48,15 +48,14 @@
             <td><%= income.team_name %></td>
             <td><%= income.amount%></td>
             <td><%= @income_values[income.team_name][income.amount-1]%></td>
-            <td><%= @game.bonus_credits.where(team: income.team, round: @current_round, recurring: false).sum(:amount) %></td>
-            <td><%= @game.bonus_credits.where('team_id = ? AND round <= ? AND recurring = TRUE', income.team_id, @current_round).sum(:amount) %></td>
+            <td><%= @game.reserves.where(team: income.team, round: @current_round, recurring: false).sum(:amount) %></td>
+            <td><%= @game.reserves.where('team_id = ? AND round <= ? AND recurring = TRUE', income.team_id, @current_round).sum(:amount) %></td>
           </tr>
-          <% end %>
-      </table>
-      <%= link_to "Income Index" , incomes_path(),:class => "button-input" %>
-      <%= link_to "Add Bonus Reserves", new_bonus_credit_path, :class => 'button-input' %>
-      <%= link_to "Bonus Reserves Index", bonus_credits_path, :class => "button-input" %>
-    </div>
+        <% end %>
+    </table>
+    <%= link_to "Income Index" , incomes_path(),:class => "button-input" %>
+    <%= link_to "Add Bonus Reserves", new_reserve_path, :class => 'button-input' %>
+    <%= link_to "Bonus Reserves Index", reserves_path, :class => "button-input" %>
   </section>
 
   <h3>Bulk Human PR Creation</h3>
