--- a/app/views/mobile_dashboard/_income.html.erb
+++ b/app/views/mobile_dashboard/_income.html.erb
@@ -1,22 +1,31 @@
+<h4><span>Country</span> Income</h4>
 <div class="income-info">
   <div class="half">
-    <h4><span>Country</span> Income</h4>
-    Credits: #<br>Income Level: #</div>
+    Credits: {{incomeValue}}<br>
+    Income Level: {{incomeLevel}}
+  </div>
+  <div class="half">
+    Reserves: {{reserves}}<br>
+    Total PR: {{totalPr}}
+  </div>
+</div>
+
+<div class="income-info middle">
+  <div class="half">
+    <h4><span>PR</span> Modifiers</h4>
+  </div>
   <div class="half">
     <label for="incomeTurn">
-      <span class="meta">Income for Turn</span>
+      <span class="meta">PR for Turn</span>
       <select id="incomeTurn"
               ng-change="updateFilter()"
               ng-model="selectedRound"
               ng-options="round for round in allRounds track by round">
       </select>
     </label>
-    Reserves: #<br>Total PR: #</div>
-</div>
+  </div>
 
 <div class="pr-modifiers">
-  <h4><span>PR</span> Modifiers</h4>
-
   <table>
     <thead>
       <tr>
