--- a/app/views/messages/_new_message.html.erb
+++ b/app/views/messages/_new_message.html.erb
@@ -2,6 +2,7 @@
   <div class="field">
     <!-- If the message is new, the recipient can be chosen. If it's a reply, we auto-calculate it -->
     <div ng-if="selectedMessage === 'new'">
+      <label>New Message</label>
       <select ng-model="message.recipient" ng-init="message.recipient=null" required>
         <option value="" disabled selected="true">Select the team</option>
         <option ng-repeat="team in validTeams" value="{{team.id}}">{{team.team_name}}</option>
@@ -12,7 +13,7 @@
       <input type="hidden" ng-model="message.recipient" ng-init="message.recipient=selectedMessage.conversation_partner.id" value="{{selectedMessage.conversation_partner.id}}" />
     </div>
 
-    <label for="content">Reply</label>
+    <label for="message.content">{{selectedMessage === 'new' ? 'Message Content' : 'Reply'}}</label>
     <textarea ng-model="message.content"></textarea>
 
     <div class="error" ng-if="messageError">{{messageError}}</div>
