--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>WatchTheSkiesDashboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all'%>
 
     <%= javascript_include_tag 'application'%>
