--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -1,5 +1,5 @@
 <% unless current_user.nil? %>
-<nav>
+<nav id="admin-nav">
   <ul>
     <li><%= link_to 'Dashboard', dashboard_path , method: :get %></li>
     <li><%= link_to 'United Nations', un_dashboard_path %></li>
