--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :time_zone %><br />
-    <%= f.time_zone_select(:time_zone, /US/, :default => "Pacific Time (US & Canada)"  ) %>
+    <%= f.time_zone_select(:time_zone, /US/, :default => "Eastern Time (US & Canada)"  ) %>
   </div>
 
   <div class="field">
