--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -73,19 +73,24 @@ $terror-red: #BD2C00;
   background-position: top center;
   background-repeat: repeat-x;
   background-size: contain;
-  font-size: 5rem;
-  line-height: 5.8rem;
+  font-size: 3.125rem;
+  line-height: 3.625rem;
   padding-bottom: 0px;
   padding-top: 20px;
 
+  h2 {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+
   h3 {
-    font-size: 6rem;
-    line-height: 6.8rem;
+    font-size: 3.75rem;
+    line-height: 4.25rem;
   }
 
   h4 {
-    font-size: 5.2rem;
-    line-height: 6rem;
+    font-size: 3.25rem;
+    line-height: 3.75rem;
   }
 }
 
@@ -182,8 +187,8 @@ $terror-red: #BD2C00;
   vertical-align: top;
 
   p {
-    font-size: 5.8rem;
-    line-height: 6.6rem;
+    font-size: 3.625rem;
+    line-height: 4.125rem;
     margin: 0;
     text-transform: uppercase;
   }
@@ -205,7 +210,7 @@ $terror-red: #BD2C00;
     border-right: 15px;
     color: #FFF;
     display: inline-block;
-    font-size: 6rem;
+    font-size: 3.75rem;
     margin: 0;
     padding: 0 15px;
 
@@ -227,7 +232,7 @@ $terror-red: #BD2C00;
   }
 
   .glyphicon {
-    font-size: 6rem;
+    font-size: 3.75rem;
     top: 7px;
   }
 
@@ -275,7 +280,7 @@ $terror-red: #BD2C00;
   .news-time {
     display: inline-block;
     float: left;
-    font-size: 5.2rem;
+    font-size: 3.25rem;
     font-style: italic;
     margin-top: 5px;
     padding-bottom: 5px;
@@ -290,8 +295,8 @@ $terror-red: #BD2C00;
 
   h4 {
     display: inline-block;
-    font-size: 4.8rem;
-    line-height: 5.6rem;
+    font-size: 3rem;
+    line-height: 3.5rem;
     font-weight: bold;
   }
 
@@ -303,8 +308,8 @@ $terror-red: #BD2C00;
 
   p {
     display: inline;
-    font-size: 4.8rem;
-    line-height: 5.6rem;
+    font-size: 3rem;
+    line-height: 3.5rem;
     margin: 5px auto
   }
 
@@ -315,8 +320,8 @@ $terror-red: #BD2C00;
   a {
     color: $terror-light-green;
     display: inline-block;
-    font-size: 3.6rem;
-    line-height: 4.4rem;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
     font-weight: bold;
     margin-top: 10px;
     text-decoration: none;
