--- a/app/views/games/human_control.html.erb
+++ b/app/views/games/human_control.html.erb
@@ -54,7 +54,7 @@
         <% end %>
     </table>
     <%= link_to "Income Index" , incomes_path(),:class => "button-input" %>
-    <%= link_to "Add Bonus Reserves", new_reserf_path, :class => 'button-input' %>
+    <%= link_to "Add Bonus Reserves", new_reserve_path, :class => 'button-input' %>
     <%= link_to "Bonus Reserves Index", reserves_path, :class => "button-input" %>
   </section>
 
