Adjust human control back to two column view.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -376,6 +376,11 @@ table {
     font-size: 1.4rem;
     margin: 0;
   }
+
+  &.unpr {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+  }
 }
 
 
