--- a/app/views/bugs/_form.html.erb
+++ b/app/views/bugs/_form.html.erb
@@ -1,5 +1,5 @@
 <% team_select = @teams.collect{ |team| [team.team_name, team.id]} %>
-<%= form_for @bug do |bug| %>
+<%= form_for @bug do |f| %>
   <% if @bug.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@bug_credits.errors.count, "error") %> prohibited this bug from being saved:</h2>
