--- a/app/views/bugs/new.html.erb
+++ b/app/views/bugs/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Bugs</h1>
+<div id="admin">
+  <h1>New Bugs</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', bugs_path %>
+  <%= link_to 'Back', bugs_path %>
+</div>
