--- a/app/views/mobile_dashboard/index.html.erb
+++ b/app/views/mobile_dashboard/index.html.erb
@@ -1,7 +1,7 @@
 <div ng-controller="apiCtrl" ng-init="setMobile(true)">
   <div class="country-header">
     <div class="country-items">
-      <%= render(:partial => "header", :controller => "dahsboard") %>
+      <%= render(:partial => "header") %>
     </div>
     <div class="country-messages">
       <div ng-if="controlMessage">Important Messages: {{controlMessage}}</div>
@@ -10,14 +10,14 @@
   </div>
 
   <div class="tabs">
-    <%= render(:partial => "navigation", :controller => "dahsboard") %>
+    <%= render(:partial => "navigation") %>
 
     <div id="tab-news" class="tab news" ng-show="focusedTab === 'news'" ng-controller="newsCtrl">
-      <%= render(:partial => "news", :controller => "dahsboard") %>
+      <%= render(:partial => "news") %>
     </div>
 
     <div id="tab-messages" class="tab messages" ng-if="focusedTab === 'messages'" ng-controller="messagesCtrl">
-      <%= render(:partial => "messages", :controller => "dahsboard") %>
+      <%= render(:partial => "messages") %>
     </div>
 
     <div id="tab-espionage" class="tab messages espionage" ng-if="focusedTab === 'espionage'" ng-controller="espionageCtrl">
