Remove "Government Of"

--- a/app/views/mobile_dashboard/_header.html.erb
+++ b/app/views/mobile_dashboard/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="my-country">
   <img ng-src="assets/flags/{{myCountryName}}.png" />
   <div class="govt">
-    <h5>Government of {{myCountryName}}</h5>
+    <h5>{{myCountryName}}</h5>
     <h4>{{myRoleName}}</h4>
   </div>
   <img ng-src="assets/flags/{{myCountryName}}.png" />
