Move LogOut button to Preferences tab for now because goddamn.

--- a/app/views/mobile_dashboard/_navigation.html.erb
+++ b/app/views/mobile_dashboard/_navigation.html.erb
@@ -17,4 +17,6 @@
 <!--   <div ng-if="checkPermissions('research')" class="tab-choice" ng-click="setTab('research')" ng-class="{'focused': focusedTab === 'research'}">Research</div>
   <div ng-if="checkPermissions('trades')" class="tab-choice" ng-click="setTab('trades')" ng-class="{'focused': focusedTab === 'trades'}">Trades</div>
   <div ng-if="checkPermissions('rumors')" class="tab-choice" ng-click="setTab('rumours')" ng-class="{'focused': focusedTab === 'rumours'}">Rumours</div> -->
+
+  <div class="tab-choice" ng-click="setTab('preferences')" ng-class="{'focused': focusedTab === 'preferences'}">Preferences</div>
 </div>
