--- a/app/views/mobile_dashboard/index.html.erb
+++ b/app/views/mobile_dashboard/index.html.erb
@@ -1,22 +1,21 @@
 <div ng-controller="apiCtrl" ng-init="setMobile(true)">
   <div class="country-header">
     <div class="country-items">
-      <%= render(:partial => "header", :controller => "dahsboard") %>
+      <%= render(:partial => "header") %>
     </div>
-    <div class="country-messages">
-      <div ng-if="controlMessage">Important Messages: {{controlMessage}}</div>
-    </div>
+    <div ng-if="controlMessage" class="country-messages">{{controlMessage}}</div>
   </div>
 
   <div class="tabs">
-    <%= render(:partial => "navigation", :controller => "dahsboard") %>
+    <%= render(:partial => "navigation") %>
 
     <div id="tab-news" class="tab news" ng-show="focusedTab === 'news'" ng-controller="newsCtrl">
-      <%= render(:partial => "news", :controller => "dahsboard") %>
+      <%= render(:partial => "news") %>
     </div>
 
+
     <div id="tab-messages" class="tab messages" ng-if="focusedTab === 'messages'" ng-controller="messagesCtrl">
-      <%= render(:partial => "messages", :controller => "dahsboard") %>
+      <%= render(:partial => "messages") %>
     </div>
 
 
@@ -25,7 +24,9 @@
     <!-- Spying -->
 
     <div id="tab-income" class="tab income" ng-if="checkPermissions('income') && focusedTab === 'income'" ng-controller="incomeCtrl">
-      <%= render(:partial => "income", :controller => "income") %>
+      <%= render(:partial => "income") %>
+    </div>
+
     <div id="tab-prefs" class="tab preferences" ng-show="focusedTab === 'preferences'">
       <%= render(:partial => "preferences") %>
     </div>
