Remove filter from Income.

--- a/app/views/mobile_dashboard/_income.html.erb
+++ b/app/views/mobile_dashboard/_income.html.erb
@@ -14,16 +14,6 @@
   <div class="half">
     <h4><span>PR</span> Modifiers</h4>
   </div>
-  <div class="half">
-    <label for="incomeTurn">
-      <span class="meta">PR for Turn</span>
-      <select id="incomeTurn"
-              ng-change="updateFilter()"
-              ng-model="selectedRound"
-              ng-options="round for round in allRounds track by round">
-      </select>
-    </label>
-  </div>
 </div>
 
 <div class="pr-modifiers">
@@ -35,7 +25,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="relations in filtered_pr track by $index">
+      <tr ng-repeat="relations in pr track by $index">
         <td class="amount">{{relations.pr_amount}}</td>
         <td class="source">{{relations.source}}</td>
       </tr>
