Add descriptions to Income.

--- a/app/views/mobile_dashboard/_income.html.erb
+++ b/app/views/mobile_dashboard/_income.html.erb
@@ -1,4 +1,5 @@
 <h4><span>Country</span> Income</h4>
+<p class="description">This is the income that you'll have able to spend in Round {{round + 1}}.</p>
 <div class="income-info">
   <div class="half">
     Credits: {{incomeValue}}<br>
@@ -9,13 +10,9 @@
     Total PR: {{totalPr}}
   </div>
 </div>
-
-<div class="income-info middle">
-  <div class="half">
-    <h4><span>PR</span> Modifiers</h4>
-  </div>
-</div>
-
+<br>
+<h4><span>PR</span> Modifiers</h4>
+<p class="description">This is what happened in Round {{round - 1}} that affected your income for this round.</p>
 <div class="pr-modifiers">
   <table>
     <thead>
