--- a/app/assets/stylesheets/mobile_dashboard.css.scss
+++ b/app/assets/stylesheets/mobile_dashboard.css.scss
@@ -240,6 +240,13 @@ body.mobile {
     }
   }
 
+  .description {
+    font-size: 14px;
+    font-style: italic;
+    line-height: 20px;
+    margin-top: 0;
+  }
+
   .income-info {
     display: flex;
     flex-wrap: wrap;
@@ -263,10 +270,6 @@ body.mobile {
 
     .header {
       font-weight: bold;
-    }
-
-    &.middle {
-      margin-top: 20px;
     }
   }
 }
