Fix typo for real

--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -7,7 +7,7 @@
     <li><%= link_to 'Human Controls', human_control_path %></li>
     <li><%= link_to 'PR Controls', public_relations_path %></li>
     <li><%= link_to 'News', news_messages_path %></li>
-    <li><%= link_to 'Messages', messages_control_path %></li>
+    <li><%= link_to 'Messages', messages_path %></li>
     <li><%= link_to 'Administration', admin_control_path %></li>
     <% if current_user && current_user.super_admin? %>
       <li><%= link_to 'Users', users_path %></li>
