--- a/app/views/messages/country_messages.html.erb
+++ b/app/views/messages/country_messages.html.erb
@@ -1,7 +1,9 @@
-<h3>See Messages Between:</h3>
-<%= link_to 'Back', messages_path %>
-<section>
-  <% @teams.each do |team|%>
-    <%= @origin_name %> and <%=  link_to team, country_conversation_path(@origin_name, team), :class => "button-input" %> </br>
-  <% end %>
-</section>
+<div id="admin">
+  <h3>See Messages Between:</h3>
+  <%= link_to 'Back', messages_path, :class => 'button-input' %>
+  <section>
+    <% @teams.each do |team|%>
+      <%= @origin_name %> and <%=  link_to team, country_conversation_path(@origin_name, team), :class => "button-input" %> </br>
+    <% end %>
+  </section>
+</div>
